--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="zoom: 1;">
   <app-root></app-root>
+  <script type="text/javascript" src=""></script>
 </body>
 </html>
