--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Logger</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+	<meta charset="utf-8">
+	<title>Logger</title>
+	<base href="/">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Dosis:300|Indie+Flower|Nunito|Roboto:300" rel="stylesheet">
 </head>
 <body style="zoom: 1;">
-  <app-root></app-root>
-  <script type="text/javascript" src=""></script>
+	<app-root></app-root>
+	<script type="text/javascript" src=""></script>
 </body>
 </html>
